--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,12 @@ on:
   push:
     branch:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      uses: action/checkout@v2
+      uses: actions/checkout@v2
       run: docker login -u $ {{ secrets.DOCKER_USERNAME }} -p $ {{ secrets.DOCKER_PASSWORD }}
       run: docker build kamal2274/react-test -f Dockerfile.dev
       run: docker run -e CI=true kamal2274/react-test npm run test  
