--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker login -u $ {{ secrets.DOCKER_USERNAME }} -p $ {{ secrets.DOCKER_PASSWORD }}
-      - run: docker build kamal2274/react-test -f Dockerfile.dev
+      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - run: docker build -t kamal2274/react-test -f Dockerfile.dev .
       - run: docker run -e CI=true kamal2274/react-test npm run test  
