--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,5 @@ jobs:
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t kamal2274/react-test -f Dockerfile.dev .
       - run: docker run -e CI=true kamal2274/react-test npm run test  
+
+      #used for testing the pipeline
